--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "parcel": "^1.10.3"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
