--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "parcel-bundler": "^1.10.3"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "bootstrap": "^4.1.3",
+    "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.3",
+    "react-dom": "^16.6.3",
+    "whatwg-fetch": "^3.0.0"
   }
 }
