--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel ./index.html",
-    "build": "parcel build ./index.html"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kiwan Lim",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
-    "parcel-bundler": "^1.10.3"
+    "babel-plugin-jsx-control-statements": "^4.0.0",
+    "parcel-bundler": "^1.10.3",
+    "sass": "^1.15.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
