--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel ./src/index.html",
+    "start:open": "parcel ./src/index.html --open",
     "build": "parcel build ./src/index.html"
   },
   "keywords": [],
