--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel ./src/index.html",
-    "start:open": "parcel ./src/index.html --open",
+    "start": "parcel ./src/index.html --port 8703",
+    "start:open": "parcel ./src/index.html --open --port 8703",
     "build": "parcel build ./src/index.html"
   },
   "keywords": [],
